Updated html file

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </div>
                             <div class="row m-4 p-3 bg-secondary ">
                                 <div class="col-12 d-flex justify-content-center ">
-                                    <p class="copyright m-0">Copyright © 2021 All rights reserved | This template is made by ahteshamakram</p>
+                                    <p class="copyright m-0">Copyright © 2021 All rights reserved | This template is made by Vivekanand</p>
                                 </div>
                             </div>
                         </div>
